--- a/themes/semib.css
+++ b/themes/semib.css
@@ -102,6 +102,7 @@ code {
 }
 
 pre {
+  text-align: left;
   display: block;
   overflow: visible;
   margin: 5px 1px;
